# Vortex

./: .gitignore  .gitmodules  README.md  note.md
Sandbox/: CMakeLists.txt  Simple.json  VortexProfile-Runtime.json  VortexProfile-Shutdown.json  VortexProfile-Startup.json  imgui.ini
Sandbox/assets/Scenes/: Vortex.vx  cube.vx  default.vx  scene.vx  square.vx  temp.vx
Sandbox/assets/Shaders/: Custom.glsl  FlatColor.glsl  Multi.glsl  Square.glsl  Texture.glsl  Textures.glsl
Sandbox/include/: ChessManager.h  ChessModel.h  EditorLayer.h  NodeEditor.h  NodePanels.h
Sandbox/include/Panels/: ContentBrowserPanel.h  SceneHierarchyPanel.h
Sandbox/src/: ChessManager.cpp  ChessModel.cpp  ContentBrowserPanel.cpp  EditorLayer.cpp  EditorLayer.h  GameLayer.cpp  GameLayer.h  Level.cpp  Level.h  NodeEditor.cpp  NodePanels.cpp  ParticleSystem.cpp  ParticleSystem.h  Player.cpp  Player.h  Sandbox2D.cpp  Sandbox2D.h  SandboxApp.cpp  SceneHierarchyPanel.cpp
Scripts/: BuildProject.sh  SetupDevelopment.sh
Vortex/: CMakeLists.txt
Vortex/cmake/: VortexConfig.cmake.in
Vortex/include/: Vortex.h
Vortex/include/Graphics/: Buffer.h  Camera.h  EditorCamera.h  FrameBuffer.h  Framebuffer.h  GraphicsContext.h  Mesh.h  MeshRenderer.h  OpenGLFramebuffer.h  OpenGLUniformBuffer.h  OrthographicCamera.h  OrthographicCameraController.h  RenderCommand.h  RenderMulti.h  Renderer.h  Renderer2D.h  Renderer2DGame.h  RendererAPI.h  Shader.h  Shape.h  Texture.h  UniformBuffer.h  Utils.h  VertexArray.h
Vortex/include/Platform/Linux/: LinuxWindow.h
Vortex/include/Platform/OpenGL/: OpenGLBuffer.h  OpenGLGraphicsContext.h  OpenGLRendererAPI.h  OpenGLShader.h  OpenGLTexture2D.h  OpenGLVertexArray.h  ShaderDataType.h
Vortex/include/Vortex/: PreHeaders.h
Vortex/include/Vortex/Core/: Application.h  Assert.h  Core.h  EntryPoint.h  Input.h  KeyCodes.h  Layer.h  LayerStack.h  Logging.h  Math.h  MouseCodes.h  TimeStep.h  UUID.h  Window.h  WindowInput.h
Vortex/include/Vortex/Debug/: Instrumentor.h
Vortex/include/Vortex/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
Vortex/include/Vortex/Imgui/: ImGuiLayer.h  ImGuiLayerBind.h
Vortex/include/Vortex/Scene/: Component.h  Entity.h  Scene.h  SceneCamera.h  SceneSerializer.h  ScriptableEntity.h
Vortex/include/Vortex/Utils/: PlatformUtils.h
Vortex/src/: Application.cpp  Buffer.cpp  EditorCamera.cpp  Entity.cpp  FrameBuffer.cpp  Framebuffer.cpp  ImGuiGlfwRender.cpp  ImGuiLayer.cpp  ImGuiLayerBind.cpp  ImGuiOpenGLRenderer.cpp  Layer.cpp  LayerStack.cpp  LinuxPlatformUtils.cpp  LinuxWindow.cpp  Logging.cpp  Math.cpp  Mesh.cpp  MeshRenderer.cpp  OpenGLBuffer.cpp  OpenGLFramBuffer.cpp  OpenGLFramebuffer.cpp  OpenGLGraphicsContext.cpp  OpenGLRendererAPI.cpp  OpenGLShader.cpp  OpenGLTexture2D.cpp  OpenGLUniformBuffer.cpp  OpenGLVertexArray.cpp  OrthographicCamera.cpp  OrthographicCameraController.cpp  PreHeaders.cpp  RenderCommand.cpp  RenderMulti.cpp  Renderer.cpp  Renderer2D.cpp  Renderer2DGame.cpp  RendererAPI.cpp  Scene.cpp  SceneCamera.cpp  SceneSerializer.cpp  Shader.cpp  (+6 more)
hazel/: CMakeLists.txt
hazel/include/: Hazel.h  test.h
hazel/include/Hazel/: Core.h  EntryPoint.h  Logging.h
hazel/include/Hazel/Core/: Application.h  EntryPoint.h  Logging.h
hazel/include/Hazel/Debug/: Instrumentor.h
hazel/include/Hazel/Event/: Event.h
hazel/src/: Application.cpp  Logging.cpp  hzpch.cpp  test.cpp
sandbox/: CMakeLists.txt
sandbox/src/: SandboxApp.cpp  application.cpp
